--- a/themes/minimat/theme.toml
+++ b/themes/minimat/theme.toml
@@ -1,18 +1,15 @@
-# theme.toml template for a Hugo theme
-# See https://github.com/spf13/hugoThemes#themetoml for an example
-
 name = "Minimat"
-license = "MIT"
+license = "Apache 2.0"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE.md"
-description = ""
+description = "Minimal Material Theme"
 homepage = "http://siteforthistheme.com/"
-tags = []
-features = []
+tags = ["blog"]
+features = ["blog"]
 min_version = "0.21"
 
 [author]
-  name = ""
-  homepage = ""
+  name = "Satta Ravi"
+  homepage = "https://satta.me"
 
 # If porting an existing theme
 [original]
