--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ script:
 deploy:
   provider: pages
   skip_cleanup: true
-  fqdn: http://satta.me
+  #fqdn: http://satta.me
   email: sattaravi@gmail.com
   name: SattaRavi
   local_dir: public
