--- a/config.toml
+++ b/config.toml
@@ -7,6 +7,7 @@ metaDataFormat = "yaml"
 #pygmentCodeFences = true
 #disqusShortname = "XXX"
 #googleAnalytics = "XXX"
+disableHugoGeneratorInject = false
 
 [Params]
   subtitle = "Build a beautiful and simple website in minutes"
