importing posts . css fixes

--- a/config.toml
+++ b/config.toml
@@ -24,6 +24,7 @@ googleAnalytics = "UA-101747393-1"
   twitter = "sattaravi"
   linkedin = "satta"
   stackoverflow = "users/2167830/satta-ravi" 
+  instagram = "satta.me"
 
 [[menu.main]]
     name = "Blog"
