--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://satta.me"
+baseurl = "https://satta.me"
 DefaultContentLanguage = "en"
 title = "Satta Ravi"
 theme = "beautifulhugo"
